fixed text spacing

--- a/src/Gif/Gif.css
+++ b/src/Gif/Gif.css
@@ -23,6 +23,7 @@ img {
   height: 100%;
   opacity: 0;
   z-index: 300;
+  padding: 10px;
 }
 
 .text-overlay:hover {
@@ -31,6 +32,11 @@ img {
   cursor: pointer;
   z-index: 300;
   filter: drop-shadow(-7px 7px 4px lightgray);
+}
+
+.text-overlay h4,
+p {
+  margin: 0.3em;
 }
 
 img:hover {
